# pi-arduino-basic-experiments-tranlslation

./: .cproject  CMakeLists.txt  README.md  main.arduino.c  main.arduino.c.txt  main.c
